# nex-studio-visual

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml
.claude/: settings.json
.claude/skills/: systematic-debugging.md  tdd.md
.githooks/: post-commit
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  main.py  testing.py
backend/config/: settings.py
backend/core/: security.py
backend/db/: __init__.py  base.py  session.py
backend/rag/: __init__.py  indexer.py  reader.py
backend/schemas/: __init__.py  agent_terminal.py  architect_message.py  architect_session.py  auth.py  auto_fix_attempt.py  bug.py  bug_fix_task.py  customer.py  delegation.py  deploy.py  design_document.py  dialogue.py  epic.py  execution_log.py  feat.py  guardian.py  kb_document.py  live_documents.py  metrics.py  migration_batch.py  migration_category_status.py  migration_id_map.py  module_dependency.py  pipeline.py  professional_spec_chat_message.py  professional_specification.py  project.py  project_member.py  project_module.py  project_specs.py  raw_specification.py  release_notes.py  (+6 more)
docker/: init-db.sh
docs/: ARCHITECT_SETUP.md
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
migrations/: env.py
mockup/: index.html
mockup_server/: Dockerfile  __init__.py  app.py  requirements.txt
scripts/: _uat_lib.py  deploy-v2-prod.sh  deploy-v3.sh  generate-test-pdfs.py  hook_agent_notify.sh  hook_rag_reindex.sh  migrate_v1_to_v2.py  notify_telegram.sh  rag_query.py  uat-deploy.py  uat-snapshot.py  uat-status.py
templates/: agent-shared-base.md  ai-agent-charter.md  ai-agent-settings.json  auditor-activity-x-runbook.md  auditor-charter.md  auditor-settings.json  ci_render_dotenv.py  coordinator-charter.md  coordinator-settings.json  error_codes_drift_check.py  github-actions-workflow.yml  pre-commit-hook.sh  release-gate-workflow.yml  release_smoke_test.sh
tests/: conftest.py  test_agent_terminal_service.py  test_alembic_migrations.py  test_architect_message_service.py  test_architect_session_service.py  test_auto_fix_attempt_service.py  test_bug_fix_task_service.py  test_bug_service.py  test_build_robustness_crash.py  test_claude_agent_readonly_tools.py  test_claude_agent_retry.py  test_claude_agent_streaming.py  test_consult_sandbox.py  test_conversation_hotovo.py  test_conversation_kontrola.py  test_conversation_programming.py  test_conversation_spine.py  test_conversation_task_plan.py  test_customer_service.py  test_db_session.py  test_delegation_service.py  test_deploy_service.py  test_design_document_service.py  test_dialogue_service.py  test_epic_service.py  test_error_codes_drift_check.py  test_execution_log_service.py  test_fast_fix.py  test_feat_router.py  test_feat_service.py  test_gate_e_backfill.py  test_generate_test_pdfs.py  test_guardian_precedent_service.py  test_guardian_review_service.py  test_health.py  test_kb_document_service.py  test_knowledge_base_writer.py  test_live_documents.py  test_metrics.py  test_migration_024.py  (+55 more)
(+721 files in other folders)
