[tool.poetry]
name = "nex-studio"
version = "0.1.0"
description = "NEX Studio — project management and AI delegation platform"
authors = ["ICC s.r.o. <automation@isnex.ai>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}
sqlalchemy = "^2.0"
pg8000 = "^1.31"
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
python-jose = {version = "^3.3", extras = ["cryptography"]}
passlib = {version = "^1.7", extras = ["bcrypt"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.1"
ruff = "^0.11"
httpx = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/testing.py", "backend/scripts/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
